# violet

./: 3550LP14A300T.lib  F2910.lib  HMC713LP3.lib  LP0603A0902ANTR.lib  LP0603A1880ANTR.lib  QPC6614TR13.lib  README.md  RFXF9503.lib  SKY13322-375LF.lib  TRF37A75IDSGR.lib  TSV911.lib  adc.bak  adf4351.bak  filterbank.sch  fp-info-cache  out.bak  out.sch  rx.sch  rx_power.sch  sym-lib-table  tx.bak  tx_amp.sch  violet-cache.lib  violet.bak  violet.sch  violet_sym.lib
software/: .gitignore  README.md  build.sh  meson.build  test.py
software/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  demo  violet_bin
software/builddir/meson-logs/: meson-log.txt
software/builddir/meson-private/: coredata.dat.prev
software/extra/tca9555/: meson.build  tca9555.py  test  test.py
software/extra/tca9555/builddir/: .ninja_deps  .ninja_log  demo  (+2 more)
software/extra/test/: test.c  test.h
software/include/: meson.build  qpc6614.h
software/include/qpc6614/: meson.build  qpc6614.h
software/include/rffc5072/: rffc5072.h  rffc5072_regs.h  rffc5072_spi.h
software/include/tca9555/: meson.build  tca9555.h
software/ltc222X/kmod/: ltc224X_drv.c
software/qpc6614/: Makefile  qpc6614.c  qpc6614.h  test
software/src/: main.cpp  meson.build  qpc6614.cpp  tca9555.cpp
software/src/ltc224x/: ltc224x.cpp
software/src/qpc6614/: meson.build  qpc6614.cpp
software/src/rffc5072/: meson.build  rffc5072.c  rffc5072_spi.c
software/src/tca9555/: meson.build  tca9555.cpp
software/tca9555/: tca9555.cpp  tca9555.h  tca9555.py  test.py
software/test/: Makefile  test
(+50 files in other folders)
