violet_sources = ['tca9555.cpp']
main_source = files('tca9555.cpp')
violetlib = shared_library('violet',
                            violet_sources,
                            include_directories : inc,
                            dependencies : wpi_dep,
                            install : true)
